--- a/config/locales/errors.yml
+++ b/config/locales/errors.yml
@@ -2,3 +2,4 @@ en:
   errors:
     board_list_exists?: Board list does not exist
     numeric_format?: Is not in a numeric compatible format
+    record_exists?: Does not exists
