fix(forms): fix all forms
why:
Confusing for a user when a form crash

This was archived by:
- add specs to the form objects
- add blank checks
- add dependent destroy

--- a/config/locales/errors.yml
+++ b/config/locales/errors.yml
@@ -7,3 +7,6 @@ en:
     same_password?: password is not equal
     uniq_organization_name?: already exist
     password_length?: to short
+    exists?: Does not exist
+    before_end?: Muss be before end
+    no_overlapping?: Can not overlap with an other
