refactoring(view): move cell index to rails view
The idea of cells is good but has some problems with other
gems and something similary can be archived by having a
helper per view

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,3 +3,7 @@ en:
   time:
     formats:
       long: "%d/%m/%y %I:%M:%S"
+      spent: "%I:%M %P"
+  date:
+    formats:
+      day: "%A %d.%m.%Y"
